--- a/styles.css
+++ b/styles.css
@@ -147,54 +147,64 @@ nav {
     position: absolute;
     top: 60px;
     padding: 24px;
-  }
-  .mobile-menu a {
+}
+
+.mobile-menu a {
     text-decoration: none;
     color: var(--black);
     font-weight: bold;
     /* margin-bottom: 24px; */
-  }
-  .mobile-menu ul {
+}
+
+.mobile-menu ul {
     padding: 0;
     margin: 24px 0 0;
     list-style: none;
-  }
-  .mobile-menu ul:nth-child(1) {
+}
+
+.mobile-menu ul:nth-child(1) {
     border-bottom: 1px solid var(--very-light-pink);
-  }
-  .mobile-menu ul li {
+}
+
+.mobile-menu ul li {
     margin-bottom: 24px;
-  }
-  .email {
+}
+
+.email {
     font-size: var(--sm);
     font-weight: 300 !important;
-  }
-  .sign-out {
+}
+
+.sign-out {
     font-size: var(--sm);
     color: var(--hospital-green) !important;
-  }
+}
 
-  /* Aside (product detail y carrito) */
-  .product-detail {
+/* Aside (product detail y carrito) */
+.product-detail {
     background-color: var(--white);
     width: 360px;
     padding: 0 24px;
     box-sizing: border-box;
     position: absolute;
     right: 0;
-  }
-  .title-container {
+}
+
+.title-container {
     display: flex;
-  }
-  .title-container img {
+}
+
+.title-container img {
     transform: rotate(180deg);
     margin-right: 14px;
-  }
-  .title {
+}
+
+.title {
     font-size: var(--lg);
     font-weight: bold;
-  }
-  .order {
+}
+
+.order {
     display: grid;
     grid-template-columns: auto 1fr;
     gap: 16px;
@@ -203,43 +213,52 @@ nav {
     margin-bottom: 24px;
     border-radius: 8px;
     padding: 0 24px;
-  }
-  .order p:nth-child(1) {
+}
+
+.order p:nth-child(1) {
     display: flex;
     flex-direction: column;
-  }
-  .order p span:nth-child(1) {
+}
+
+.order p span:nth-child(1) {
     font-size: var(--md);
     font-weight: bold;
-  }
-  .order p:nth-child(2) {
+}
+
+.order p:nth-child(2) {
     text-align: end;
     font-weight: bold;
-  }
-  .shopping-cart {
+}
+
+.shopping-cart {
     display: grid;
     grid-template-columns: auto 1fr auto auto;
     gap: 16px;
     margin-bottom: 24px;
     align-items: center;
-  }
-  .shopping-cart figure {
+}
+
+.shopping-cart figure {
     margin: 0;
-  }
-  .shopping-cart figure img {
+}
+
+.shopping-cart figure img {
     width: 70px;
     height: 70px;
     border-radius: 20px;
     object-fit: cover;
-  }
-  .shopping-cart p:nth-child(2) {
+}
+
+.shopping-cart p:nth-child(2) {
     color: var(--very-light-pink);
-  }
-  .shopping-cart p:nth-child(3) {
+}
+
+.shopping-cart p:nth-child(3) {
     font-size: var(--md);
     font-weight: bold;
-  }
-  .primary-button {
+}
+
+.primary-button {
     background-color: var(--hospital-green);
     border-radius: 8px;
     border: none;
@@ -249,8 +268,58 @@ nav {
     font-size: var(--md);
     font-weight: bold;
     height: 50px;
-  }
-  
+}
+
+/* Product List */
+.cards-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 240px);
+    gap: 26px;
+    place-content: center;
+    margin-top: 20px;
+}
+
+.product-card {
+    width: 240px;
+}
+
+.product-card img {
+    width: 240px;
+    height: 240px;
+    border-radius: 20px;
+    object-fit: cover;
+}
+
+.product-info {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 12px;
+}
+
+.product-info figure {
+    margin: 0;
+}
+
+.product-info figure img {
+    width: 35px;
+    height: 35px;
+}
+
+.product-info div p:nth-child(1) {
+    font-weight: bold;
+    font-size: var(--md);
+    margin-top: 0;
+    margin-bottom: 4px;
+}
+
+.product-info div p:nth-child(2) {
+    font-size: var(--sm);
+    margin-top: 0;
+    margin-bottom: 0;
+    color: var(--very-light-pink);
+}
+
 
 @media (max-width: 640px) {
     .menu {
@@ -271,7 +340,20 @@ nav {
 
     .product-detail {
         width: 100%;
-      }
+    }
+
+    .cards-container {
+        grid-template-columns: repeat(auto-fill, 140px);
+    }
+
+    .product-card {
+        width: 140px;
+    }
+
+    .product-card img {
+        width: 140px;
+        height: 140px;
+    }
 }
 
 @media (min-width: 641px) {
