Product Detail, Shopping cart y Mobile Menu

--- a/styles.css
+++ b/styles.css
@@ -277,7 +277,7 @@ aside {
 }
 
 /* ProductDetail */
-#productDetail .close {
+#productDetail .product-detail-close {
     background: var(--white);
     width: 14px;
     height: 14px;
@@ -288,7 +288,7 @@ aside {
     padding: 12px;
     border-radius: 50%;
   }
-  #productDetail .close:hover {
+  #productDetail .product-detail-close:hover {
     cursor: pointer;
   }
   #productDetail > img:nth-child(2) {
