--- a/styles.css
+++ b/styles.css
@@ -342,7 +342,7 @@ aside {
     grid-template-columns: repeat(auto-fill, 240px);
     gap: 26px;
     place-content: center;
-    margin-top: 20px;
+    margin-top: 20px;    
 }
 
 .product-card {
@@ -354,6 +354,7 @@ aside {
     height: 240px;
     border-radius: 20px;
     object-fit: cover;
+    cursor: pointer;
 }
 
 .product-card .product-info {
